部分测试类引入junit5参数化测试简化代码