@@ -15,7 +15,7 @@ class UdafCustomParamDataUtilTest {
     void testGetUdafCustomParamList_ListObject() {
         List<UdafCustomParamData> udafCustomParamDataList = UdafCustomParamDataUtil.getUdafCustomParamList(ListObjectAggregateFunction.class, AggregateFunctionFieldAnnotation.class);
         assertEquals(1, udafCustomParamDataList.size());
-        assertEquals("UdafCustomParamData(name=limit, displayName=长度限制, description=, dataType=Integer, defaultValue=10, update=false, notNull=false)", udafCustomParamDataList.get(0).toString());
+        assertEquals("UdafCustomParamData(name=limit, displayName=长度限制, description=, dataType=Integer, defaultValue=10, update=false, notNull=false)", udafCustomParamDataList.getFirst().toString());
     }
 
 }
